<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.hexaengineer.cofinder.ui.home.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_coworker_fragment"
            app:destination="@id/coworker_fragment" />
    </fragment>

    <fragment
        android:id="@+id/coworker_fragment"
        android:name="com.hexaengineer.cofinder.ui.coworker.CoworkerFragment"
        android:label="@string/coworker"
        tools:layout="@layout/fragment_coworker">
        <action
            android:id="@+id/action_coworker_fragment_to_post_fragment"
            app:destination="@id/post_fragment" />
    </fragment>

    <fragment
        android:id="@+id/post_fragment"
        android:name="com.hexaengineer.cofinder.ui.post.PostFragment"
        android:label="@string/posting"
        tools:layout="@layout/fragment_post" >
        <action
            android:id="@+id/action_post_fragment_to_notification_fragment"
            app:destination="@id/notification_fragment" />
    </fragment>

    <fragment
        android:id="@+id/notification_fragment"
        android:name="com.hexaengineer.cofinder.ui.notification.NotificationFragment"
        android:label="@string/notifikasi"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_notification_fragment_to_profile_fragment"
            app:destination="@id/profile_fragment" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.hexaengineer.cofinder.ui.profile.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile" />

</navigation>